--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -18,10 +18,10 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Clean
-      working-directory: backend/apicar
+      working-directory: backend/
       run: mvn clean
     - name: Build
-      working-directory: backend/apicar
+      working-directory: backend/
       run: mvn -B package
 
   test:
@@ -36,11 +36,11 @@ jobs:
         distribution: 'temurin'
         cache: maven
     - name: Clean
-      working-directory: backend/apicar
+      working-directory: backend/
       run: mvn clean
     - name: Build
-      working-directory: backend/apicar
+      working-directory: backend/
       run: mvn -B package
     - name: Test
-      working-directory: backend/apicar
+      working-directory: backend/
       run: mvn test
